<resources>
    <string name="app_name">Task-2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="artist">Artist</string>
    <string name="works">Works</string>
    <string name="expositions">Expositions</string>
    <string name="info">Info</string>
    <string name="main_activity">Main activity</string>
    <string name="art_activity">Art activity</string>
    <string name="image_view_activity">ImageView activity</string>
    <string name="news_fragment">News fragment</string>
    <string name="works_fragment">Works fragment</string>
    <string name="artist_fragment">Artist fragment</string>
    <string name="expositions_fragment">Expositions fragment</string>
    <string name="info_fragment">Info fragment</string>
    <string name="post_fragment">Post fragment</string>
    <string name="detail_fragment">Detail fragment</string>
    <string name="go_to_imageview_activity">Go to ImageView activity</string>
    <string name="go_to_post_fragment">Go to Post fragment</string>
    <string name="go_to_artist_fragment">Go to Artist fragment</string>
</resources>