<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="by.senla.timmeleshko.task2.NewsFragment"
        android:label="@string/news_fragment"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_artistFragment"
            app:destination="@id/artistFragment" />
        <action
            android:id="@+id/action_newsFragment_to_imageViewActivity"
            app:destination="@id/imageViewActivity" />
        <action
            android:id="@+id/action_newsFragment_to_postFragment"
            app:destination="@id/postFragment" />
    </fragment>
    <fragment
        android:id="@+id/artistFragment"
        android:name="by.senla.timmeleshko.task2.ArtistFragment"
        android:label="@string/artist_fragment"
        tools:layout="@layout/fragment_artist" >
        <action
            android:id="@+id/action_artistFragment_to_imageViewActivity"
            app:destination="@id/imageViewActivity" />
    </fragment>
    <fragment
        android:id="@+id/worksFragment"
        android:name="by.senla.timmeleshko.task2.WorksFragment"
        android:label="@string/works_fragment"
        tools:layout="@layout/fragment_works" >
        <action
            android:id="@+id/action_worksFragment_to_artActivity"
            app:destination="@id/artActivity" />
    </fragment>
    <fragment
        android:id="@+id/expositionsFragment"
        android:name="by.senla.timmeleshko.task2.ExpositionsFragment"
        android:label="@string/expositions_fragment"
        tools:layout="@layout/fragment_expositions" >
        <action
            android:id="@+id/action_expositionsFragment_to_artActivity"
            app:destination="@id/artActivity" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="by.senla.timmeleshko.task2.InfoFragment"
        android:label="@string/info_fragment"
        tools:layout="@layout/fragment_info" >
        <action
            android:id="@+id/action_infoFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="by.senla.timmeleshko.task2.DetailFragment"
        android:label="@string/detail_fragment"
        tools:layout="@layout/fragment_detail" />
    <activity
        android:id="@+id/artActivity"
        android:name="by.senla.timmeleshko.task2.ArtActivity"
        android:label="@string/art_activity" />
    <activity
        android:id="@+id/imageViewActivity"
        android:name="by.senla.timmeleshko.task2.ImageViewActivity"
        android:label="@string/image_view_activity" />
    <fragment
        android:id="@+id/postFragment"
        android:name="by.senla.timmeleshko.task2.PostFragment"
        android:label="@string/post_fragment"
        tools:layout="@layout/fragment_post" />

</navigation>