<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/itemId"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/itemId"
        android:gravity="center_vertical"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/itemTitle"
        android:layout_toEndOf="@id/itemId"
        android:gravity="center_vertical"
        android:textSize="16sp" />

    <Button
        android:id="@+id/goToPostFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_post_fragment"
        android:textSize="12sp" />

    <Button
        android:id="@+id/goToImageViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goToPostFragment"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_imageview_activity"
        android:textSize="12sp" />

    <Button
        android:id="@+id/goToArtistFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goToImageViewActivity"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_artist_fragment"
        android:textSize="12sp" />

</RelativeLayout>